corrected the font color for the message on line 38 in the HTML and added the display flex - align-items center to the .hour in the CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,9 +38,11 @@ header {
 }
 
 .hour {
+  display: flex;
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  align-items: center;
 }
 
 .past {
